Add MathJax support

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -6,6 +6,8 @@
         <link rel="stylesheet" type="text/css" media="screen"
               href="stylesheets/stylesheet.css">
         <title>{{ site.github.project_title }}</title>
+        <!-- MathJax -->
+        <script type="text/javascript" src="http://cdn.mathjax.org/mathjax/latest/MathJax.js?config=TeX-AMS-MML_HTMLorMML"> </script>
     </head>
 
     <body>
