Use site.project_title instead of site.github.project_title

--- a/_includes/foot.html
+++ b/_includes/foot.html
@@ -5,7 +5,7 @@
         <div id="footer_wrap" class="outer">
             <footer class="inner">
                 <p class="copyright">
-                    {{ site.github.project_title }} maintained by
+                    {{ site.project_title }} maintained by
                     <a href="{{ site.github.owner_url }}">
                         {{ site.github.owner_name }}
                     </a>
