--- a/_includes/head.html
+++ b/_includes/head.html
@@ -5,7 +5,7 @@
         <meta name="description" content={{ site.github.project_tagline }} />
         <link rel="stylesheet" type="text/css" media="screen"
               href="stylesheets/stylesheet.css">
-        <title>{{ site.github.project_title }}</title>
+        <title>{{ site.project_titla }}</title>
         <!-- MathJax -->
         <script type="text/javascript" src="http://cdn.mathjax.org/mathjax/latest/MathJax.js?config=TeX-AMS-MML_HTMLorMML"> </script>
     </head>
@@ -17,7 +17,7 @@
                 <a id="forkme_banner" href="{{ site.github.repository_url }}">
                     View on GitHub
                 </a>
-                <h1 id="project_title">{{ site.github.project_title }}</h1>
+                <h1 id="project_title">{{ site.project_title }}</h1>
                 <h2 id="project_tagline">{{ site.github.project_tagline }}</h2>
                 <section id="downloads">
                     <a class="zip_download_link"
